--- a/public/html/index.html
+++ b/public/html/index.html
@@ -3,6 +3,30 @@
     <head>
         <title>Tape-loop</title>
         <script src="/js/app.js" defer async></script>
+        <style>
+      .pad {
+        background-color: silver;
+        padding:10px;
+        width:100px;
+        height:100px;
+        border-radius:5px;
+        display:inline-block;
+        margin:10px;
+        font-family: sans-serif;
+        color:white;
+        text-align: center;  
+        opacity:0.8;
+        transition:opacity 0.5s;
+      }
+      .pad:hover {
+        cursor:grab;
+        opacity:0.6;
+      }
+      .pad:active {
+        cursor:grabbing;
+        opacity:1;
+      }
+    </style>
     </head>
     <body>
       Welcome.
